# data-engineering-zoomcamp-docker-workshop

./: .gitignore  README.md  main.py
02-workflow-orchestration/: docker-compose.yml
02-workflow-orchestration/flows/: 06_gcp_kv.yaml  11_chat_with_rag.yaml
03-data-warehouse/: load_yellow_taxi_data.py  pyproject.toml  week_3_hw_nj.md
pipeline/: Dockerfile_basic_pipleine_old  Moody.ipynb  ingest_data.py  pipeline.py  pyproject.toml
